[package]
name = "diary2"
version = "1.2.0"
authors = ["masuke5 <s.zerogoichi@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"
oauth2 = "3.0.0-alpha.7"
url = "1.0"
reqwest = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.3.4"
comrak = "0.7"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
